--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
