--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.44.4",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
