--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/leaflet": "^1.9.20",
+    "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,6 +53,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -59,7 +61,7 @@
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
