--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "drizzle-orm": "^0.44.4",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "immer": "^10.1.1",
     "input-otp": "^1.4.2",
+    "isomorphic-dompurify": "^2.26.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.4",
@@ -66,7 +68,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.25.28"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@dyad-sh/nextjs-webpack-component-tagger": "^0.8.0",
