--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "drizzle-orm": "^0.44.4",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "graphql": "^16.11.0",
+    "graphql-yoga": "^5.15.1",
     "immer": "^10.1.1",
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.26.0",
